--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
+    "@google-cloud/translate": "^6.3.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react-router-dom": "^5.2.0"
   },
