--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
     "@google-cloud/translate": "^6.3.1",
+    "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "react-bootstrap": "^2.0.3",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
