--- a/package.json
+++ b/package.json
@@ -39,9 +39,17 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react-bootstrap": "^2.0.3",
-    "react-router-dom": "^5.2.0"
-  },
-  "devDependencies": {
+    "react-router-dom": "^5.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.7",
+    "sqlite3": "^5.0.2",
+    "superagent": "^6.1.0",
+    "knex": "^0.95.4",
+    "webpack": "^5.34.0",
     "@babel/core": "^7.13.15",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
@@ -52,23 +60,15 @@
     "@babel/register": "^7.13.14",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.2"
+  },
+  "devDependencies": {
     "eslint": "7.9.0",
     "eslint-config-eda": "0.1.4",
     "jest": "^26.6.3",
-    "knex": "^0.95.4",
     "nodemon": "^2.0.7",
-    "npm-run-all": "^4.1.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.13.7",
-    "sqlite3": "^5.0.2",
-    "superagent": "^6.1.0",
     "supertest": "^6.1.3",
-    "webpack": "^5.34.0",
+    "npm-run-all": "^4.1.5",
     "webpack-cli": "^4.6.0"
   }
 }
