--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "@babel/register": "^7.13.14",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
     "eslint": "7.9.0",
@@ -69,7 +70,6 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
-    "npm-run-all": "^4.1.5",
-    "webpack-cli": "^4.6.0"
+    "npm-run-all": "^4.1.5"
   }
 }
