--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React",
+  "name": "UseKorean",
   "version": "0.1.0",
   "description": "A React Web App",
   "main": "server/index.js",
@@ -62,14 +62,14 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "babel-loader": "^8.2.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^5.6.0",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "eslint": "7.9.0",
     "eslint-config-eda": "0.1.4",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.3",
-    "npm-run-all": "^4.1.5"
+    "supertest": "^6.1.3"
   }
 }
