--- a/package.json
+++ b/package.json
@@ -35,22 +35,6 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
-    "@google-cloud/translate": "^6.3.1",
-    "bootstrap": "^5.1.3",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "react-bootstrap": "^2.0.3",
-    "react-router-dom": "^5.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.13.7",
-    "sqlite3": "^5.0.2",
-    "superagent": "^6.1.0",
-    "knex": "^0.95.4",
-    "webpack": "^5.34.0",
     "@babel/core": "^7.13.15",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
@@ -59,10 +43,27 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.14",
+    "@google-cloud/translate": "^6.3.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "babel-loader": "^8.2.2",
-    "npm-run-all": "^4.1.5"
+    "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "knex": "^0.95.4",
+    "npm-run-all": "^4.1.5",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.7",
+    "sqlite3": "^5.0.2",
+    "superagent": "^6.1.0",
+    "webpack": "^5.34.0",
+    "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
     "eslint": "7.9.0",
