--- a/package.json
+++ b/package.json
@@ -66,9 +66,7 @@
     "sqlite3": "^5.0.2",
     "superagent": "^6.1.0",
     "webpack": "^5.34.0",
-    "webpack-cli": "^4.9.1"
-  },
-  "devDependencies": {
+    "webpack-cli": "^4.9.1",
     "eslint": "7.9.0",
     "eslint-config-eda": "0.1.4",
     "jest": "^26.6.3",
