change things to fix heroku

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node server",
-    "build": "run-p build:client ",
+    "build": "run-p build:client",
+    "build:client": "npm run webpack -- --mode production",
     "dev": "run-p client server",
-    "client": "npm run webpack -- --mode production",
+    "client": "webpack --watch --config client/webpack.config.js",
     "server": "nodemon server",
     "knex": "knex --knexfile server/db/knexfile.js",
     "test": "jest --watchAll --verbose",
