--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint . --ext .js,.jsx"
   },
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "npm": "6.14.15"
   },
   "author": "EDA",
   "license": "ISC",
