--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "node-record-lpcm16": "^1.0.1",
     "react-bootstrap": "^2.0.3",
     "react-router-dom": "^5.2.0"
   },
