--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
+    "@google-cloud/speech": "^4.9.0",
     "@google-cloud/translate": "^6.3.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
